tools/tests/errors/path_join_empty.experr
join expected at least one path component
